gatt_server/build/log/idf_py_stdout_output_10772
[1/12] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\Espressif\workspace\gatt_server\build\bootloader\esp-idf\esptool_py && D:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe D:/Espressif/frameworks/esp-idf-v5.1.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Espressif/workspace/gatt_server/build/bootloader/bootloader.bin"
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/10] Building C object esp-idf/uart_handle/CMakeFiles/__idf_uart_handle.dir/uart_handle.c.obj
FAILED: esp-idf/uart_handle/CMakeFiles/__idf_uart_handle.dir/uart_handle.c.obj 
ccache D:\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Espressif/workspace/gatt_server/build/config -ID:/Espressif/workspace/gatt_server/components/uart_handle/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/newlib/platform_include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/FreeRTOS-Kernel/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/esp_additions/include/freertos -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/esp_additions/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/freertos/esp_additions/arch/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/include/soc -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/include/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/port/esp32/. -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_hw_support/port/esp32/private_include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/heap/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/log/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/soc/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/soc/esp32 -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/soc/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/hal/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/hal/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/hal/platform_port/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_rom/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_rom/include/esp32 -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_rom/esp32 -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_common/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_system/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_system/port/soc -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_system/port/include/private -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/xtensa/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/xtensa/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/include/apps -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/include/apps/sntp -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/lwip/src/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/port/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/port/freertos/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/port/esp32xx/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/lwip/port/esp32xx/include/arch -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/deprecated -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/analog_comparator/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/dac/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/gpio/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/gptimer/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/i2c/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/i2s/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/ledc/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/mcpwm/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/parlio/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/pcnt/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/rmt/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/sdio_slave/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/sdmmc/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/sigma_delta/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/spi/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/temperature_sensor/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/touch_sensor/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/twai/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/uart/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/usb_serial_jtag/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/driver/touch_sensor/esp32/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_pm/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_ringbuf/include -ID:/Espressif/frameworks/esp-idf-v5.1.1/components/esp_timer/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/Espressif/workspace/gatt_server=. -fmacro-prefix-map=D:/Espressif/frameworks/esp-idf-v5.1.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/uart_handle/CMakeFiles/__idf_uart_handle.dir/uart_handle.c.obj -MF esp-idf\uart_handle\CMakeFiles\__idf_uart_handle.dir\uart_handle.c.obj.d -o esp-idf/uart_handle/CMakeFiles/__idf_uart_handle.dir/uart_handle.c.obj -c D:/Espressif/workspace/gatt_server/components/uart_handle/uart_handle.c
D:/Espressif/workspace/gatt_server/components/uart_handle/uart_handle.c: In function 'uart2_init':
D:/Espressif/workspace/gatt_server/components/uart_handle/uart_handle.c:39:17: error: 'uart_handle_event' undeclared (first use in this function)
   39 |     xTaskCreate(uart_handle_event, "uart_event_task", 2048, NULL, 2, NULL);
      |                 ^~~~~~~~~~~~~~~~~
D:/Espressif/workspace/gatt_server/components/uart_handle/uart_handle.c:39:17: note: each undeclared identifier is reported only once for each function it appears in
D:/Espressif/workspace/gatt_server/components/uart_handle/uart_handle.c: At top level:
D:/Espressif/workspace/gatt_server/components/uart_handle/uart_handle.c:42:13: warning: 'uart_handle_event' defined but not used [-Wunused-function]
   42 | static void uart_handle_event()
      |             ^~~~~~~~~~~~~~~~~
[3/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/gatts_demo.c.obj
ninja: build stopped: subcommand failed.
